--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -93,7 +93,7 @@
     <div class="row mt-4">
         <div class="col-md-6">
             <div class="card" title="La suma total de las ventas al contado y los pagos de las ventas a crédito durante el día en curso.">
-                <div class="card-body" @onclick="Cuadre">
+                <div class="card-body" @onclick="Cuadre" style="cursor: pointer;">
                     <h5 class="card-title" >
                         <span class="oi oi-dollar oi mr-2"></span>
                         <strong>Dinero en caja</strong>
