--- a/Pages/Facturacion/FacturaContado.razor
+++ b/Pages/Facturacion/FacturaContado.razor
@@ -242,12 +242,21 @@ else
                                             <td>@f.Fecha.ToShortDateString()</td>
                                             <td>
                                                 <div class="button d-print-none">
-                                                        <button @onclick="()=>Seleccionar(f.Id, f)" class="btn btn-outline-primary">
-                                                            <span class="oi oi-info"></span>
-                                                        </button>
-                                                    <button @onclick="() => Eliminar(f)" class="btn btn-outline-danger d-print-none" >
-                                                        <span class="oi oi-trash"></span>
+                                                    <button @onclick="()=>Seleccionar(f.Id, f)" class="btn btn-outline-primary">
+                                                        <span class="oi oi-info"></span>
                                                     </button>
+                                                    @if(Role=="Admin")
+                                                    {
+                                                        <button @onclick="() => Eliminar(f)" class="btn btn-outline-danger d-print-none" >
+                                                            <span class="oi oi-trash"></span>
+                                                        </button>
+                                                    }
+                                                    else
+                                                    {
+                                                       <button class="btn btn-outline-danger d-print-none ms-1" >
+                                                            <span class="oi oi-lock-locked"></span>
+                                                        </button> 
+                                                    }
                                                 </div>
                                             </td>
                                         </tr>
@@ -322,8 +331,20 @@ else
         await CargarProducto();
         await CargarPagos();
     }
+    
+    public string Role { get; set; } = "";
     protected override async Task OnInitializedAsync()
     {
+        // Obtener el estado de autenticación
+        var authenticationState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authenticationState.User;
+
+        // Verifica si el usuario está autenticado
+        if (user.Identity.IsAuthenticated)
+        {
+            // Extrae los valores de los reclamos y asigna las propiedades
+            Role = user.FindFirst(ClaimTypes.Role)?.Value ?? "";
+        }
         await LoadDataAsync();
     }
     public void Seleccionar(int Id, FacturaResponse factura)
