--- a/Pages/Facturacion/FacturaCredito.razor
+++ b/Pages/Facturacion/FacturaCredito.razor
@@ -73,12 +73,6 @@
                         }
                     </datalist>
                     
-                    <button class="btn btn-outline-primary btn-lg d-print-none" 
-                        @onclick="async ()=>{await PrintPageAsync();}"
-                        title="Imprimir factura">
-                        <span class="oi oi-print"></span>
-                    </button>
-                    
                 </div>
                 <div class="input-group mb-3">
                     <span class="form-control w-50">
@@ -489,7 +483,7 @@ else
                                                     @if (f.SaldoPendiente > 0)
                                                     {
                                                         <button @onclick="() => MostrarPagos(f)"
-                                                            class="btn btn-outline-success ">
+                                                            class="btn btn-outline-success me-1">
                                                             <span class="oi oi-dollar"></span>
                                                         </button>
                                                     
@@ -497,9 +491,18 @@ else
                                                     <button @onclick="()=>Seleccionar(f.Id, f)" class="btn btn-outline-primary">
                                                         <span class="oi oi-info"></span>
                                                     </button>
-                                                    <button @onclick="() => Eliminar(f)" class="btn btn-outline-danger d-print-none" >
-                                                        <span class="oi oi-trash"></span>
-                                                    </button>
+                                                    @if(Role=="Admin")
+                                                    {
+                                                        <button @onclick="() => Eliminar(f)" class="btn btn-outline-danger d-print-none" >
+                                                            <span class="oi oi-trash"></span>
+                                                        </button>
+                                                    }
+                                                    else
+                                                    {
+                                                       <button class="btn btn-outline-danger d-print-none ms-1" >
+                                                            <span class="oi oi-lock-locked"></span>
+                                                        </button> 
+                                                    }
                                                 </div>
                                             </td>
                                         </tr>
