--- a/Pages/Producto/Producto.razor
+++ b/Pages/Producto/Producto.razor
@@ -49,8 +49,15 @@
                         <span class="input-group-text bg-white text-black">
                             <span class="oi oi-code"></span>
                         </span>
-                        <input type="text" class="form-control" placeholder="Codigo" id="nombreCompleto" 
-                            @bind-value="productoRequest.Codigo" required />
+                        @if(Role == "Admin")
+                        {
+                            <input type="text" class="form-control" placeholder="Codigo" id="nombreCompleto" 
+                                @bind-value="productoRequest.Codigo" required />
+                        }
+                        else{
+                            <input type="text" class="form-control" placeholder="Codigo" id="nombreCompleto" 
+                                @bind-value="productoRequest.Codigo" required readonly/>
+                        }
                     </div>
                     @if(productoRequest.Id > 0)
                     {
@@ -67,8 +74,17 @@
                             <div class="col">
                                 <div class="input-group">
                                     <label class="input-group-text bg-white text-black"><strong>Stock</strong></label>
-                                    <input type="number" class="form-control"  
-                                        @bind-value="productoRequest.Stock"/>
+                                    @if(Role == "Admin")
+                                    {
+                                        <input type="number" class="form-control" placeholder="Stock" id="correo" 
+                                            @bind-value="productoRequest.Stock" required min="0.01" step="0.01"
+                                            title="Agrega la cantidad de productos"/>
+                                    }
+                                    else{
+                                        <input type="number" class="form-control" placeholder="Stock" id="correo" 
+                                            @bind-value="productoRequest.Stock" required min="0.01" step="0.01"
+                                            title="Agrega la cantidad de productos" readonly/>
+                                    }
                                 </div>
                             </div>
                         </div>
@@ -128,9 +144,17 @@
                         <span class="input-group-text bg-white text-black">
                             <span class="oi oi-dollar"><strong>Venta</strong></span>
                         </span>
-                        <input class="form-control" placeholder="Precio/Venta" id="precio" 
-                        @bind-value="productoRequest.Precio" required min="0.01" step="0.01"
-                        title="Precio de venta"/>
+                        @if(Role == "Admin")
+                        {
+                            <input class="form-control" placeholder="Precio/Venta" id="precio" 
+                            @bind-value="productoRequest.Precio" required min="0.01" step="0.01"
+                            title="Precio de venta"/>
+                        }
+                        else{
+                            <input class="form-control" placeholder="Precio/Venta" id="precio" 
+                            @bind-value="productoRequest.Precio" required min="0.01" step="0.01"
+                            title="Precio de venta" readonly/>
+                        }
                     </div>
                 </div>
 
@@ -200,10 +224,19 @@
                                         class="btn btn-outline-primary">
                                         <span class="oi oi-pencil"></span>
                                     </button>
-                                    <button @onclick="()=>Eliminar(productoRow)"
-                                        class="btn btn-outline-danger">
-                                        <span class="oi oi-trash"></span>
-                                    </button>
+                                    @if(Role == "Admin")
+                                    {
+                                        <button @onclick="()=>Eliminar(productoRow)"
+                                            class="btn btn-outline-danger">
+                                            <span class="oi oi-trash"></span>
+                                        </button>
+                                    }
+                                    else
+                                    {
+                                        <button class="btn btn-outline-danger d-print-none ms-1" >
+                                            <span class="oi oi-lock-locked"></span>
+                                        </button> 
+                                    }
                                 </td>
                             </tr>
                         }
@@ -230,6 +263,8 @@
     public string Nombre { get; set; } = string.Empty;
     public string NombreEmp { get; set; } = string.Empty;
     public int Stock { get; set; } = 0;
+    public string Role { get; set; } = "";
+
     void GoCategory()
     {
         urlHelper.NavigateTo("category");
@@ -277,6 +312,16 @@
 
     protected override async Task OnInitializedAsync()
     {
+        // Obtener el estado de autenticación
+        var authenticationState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authenticationState.User;
+
+        // Verifica si el usuario está autenticado
+        if (user.Identity.IsAuthenticated)
+        {
+            // Extrae los valores de los reclamos y asigna las propiedades
+            Role = user.FindFirst(ClaimTypes.Role)?.Value ?? "";
+        }
         await CargarContactos();
         await CargarProveedores();
         await CargarCategorias();
