--- a/Pages/Proveedor/Proveedor.razor
+++ b/Pages/Proveedor/Proveedor.razor
@@ -143,16 +143,29 @@
                                 <td>@proveedorRow.Email</td>
                                 <td>@FormatPhoneNumber(proveedorRow.Telefono)</td>
                                 <td>@proveedorRow.Direccion</td>
-                                <td class="d-print-none">
-                                    <button @onclick="()=>Seleccionar(proveedorRow.Id)"
-                                        class="btn btn-outline-primary">
-                                        <span class="oi oi-pencil"></span>
-                                    </button>
-                                    <button @onclick="()=>Eliminar(proveedorRow)"
-                                        class="btn btn-outline-danger">
-                                        <span class="oi oi-trash"></span>
-                                    </button>
-                                </td>
+                                @if(Role == "Admin")
+                                {
+                                    <td class="d-print-none">
+                                        <button @onclick="()=>Seleccionar(proveedorRow.Id)"
+                                            class="btn btn-outline-primary">
+                                            <span class="oi oi-pencil"></span>
+                                        </button>
+                                        <button @onclick="()=>Eliminar(proveedorRow)"
+                                            class="btn btn-outline-danger">
+                                            <span class="oi oi-trash"></span>
+                                        </button>
+                                    </td>
+                                }
+                                else{
+                                    <td class="d-print-none">
+                                        <button class="btn btn-outline-primary">
+                                            <span class="oi oi-lock-locked"></span>
+                                        </button>
+                                        <button class="btn btn-outline-danger">
+                                            <span class="oi oi-lock-locked"></span>
+                                        </button>
+                                    </td>
+                                }
                             </tr>
                         }
                     </tbody>
@@ -172,6 +185,7 @@
     public List<ProveedorResponse> Proveedores { get; set; } = new();
     public ProveedorRequest proveedorRequest { get; set; } = new();
     public bool showCard { get; set; } = false;
+    public string Role { get; set; } = "";
 
     private string FormatPhoneNumber(string phoneNumber)
     {
@@ -210,6 +224,16 @@
 
     protected override async Task OnInitializedAsync()
     {
+        // Obtener el estado de autenticación
+        var authenticationState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authenticationState.User;
+
+        // Verifica si el usuario está autenticado
+        if (user.Identity.IsAuthenticated)
+        {
+            // Extrae los valores de los reclamos y asigna las propiedades
+            Role = user.FindFirst(ClaimTypes.Role)?.Value ?? "";
+        }
         await CargarContactos();
     }
 
