--- a/Pages/Facturacion/FacturaCredito.razor
+++ b/Pages/Facturacion/FacturaCredito.razor
@@ -52,8 +52,8 @@
         @if(Role=="Admin")
         {
             <div class="card p-2 d-print-none">
-                <div class="card-header card-title">
-                    <strong>¿Que desea el cliente?</strong>
+                <div class="card-header card-title bg-black text-white">
+                    <h5>¿Qué desea el cliente?</h5>
                 </div>
                 <div class="input-group mb-3 mt-2">
                     <input class="form-control"
