--- a/Pages/Facturacion/FacturaCredito.razor
+++ b/Pages/Facturacion/FacturaCredito.razor
@@ -493,7 +493,7 @@ else
                                                     </button>
                                                     @if(Role=="Admin")
                                                     {
-                                                        <button @onclick="() => Eliminar(f)" class="btn btn-outline-danger d-print-none" >
+                                                        <button @onclick="() => Eliminar(f)" class="btn btn-outline-danger d-print-none ms-1">
                                                             <span class="oi oi-trash"></span>
                                                         </button>
                                                     }
