--- a/Pages/Usuario/Usuario.razor
+++ b/Pages/Usuario/Usuario.razor
@@ -159,7 +159,7 @@
                                     @if(Role == "Admin")
                                     {
                                         <button @onclick="()=>Eliminar(item)"
-                                            class="btn btn-outline-danger ">
+                                            class="btn btn-outline-danger ms-1">
                                             <span class="oi oi-trash"></span>
                                         </button>
                                     }
