--- a/Pages/Producto/Producto.razor
+++ b/Pages/Producto/Producto.razor
@@ -227,7 +227,7 @@
                                     @if(Role == "Admin")
                                     {
                                         <button @onclick="()=>Eliminar(productoRow)"
-                                            class="btn btn-outline-danger">
+                                            class="btn btn-outline-danger ms-1">
                                             <span class="oi oi-trash"></span>
                                         </button>
                                     }
