--- a/Pages/Usuario/Usuario.razor
+++ b/Pages/Usuario/Usuario.razor
@@ -104,10 +104,13 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-11">
-                    <!-- Button trigger modal -->
-                    <button class="btn btn-outline-success" @onclick="ShowCard">
-                        <span class="oi oi-plus"></span>
-                    </button>
+                    @if(Role == "Admin")
+                    {
+                        <!-- Button trigger modal -->
+                        <button class="btn btn-outline-success" @onclick="ShowCard">
+                            <span class="oi oi-plus"></span>
+                        </button>
+                    }
                 </div>
                 <div class="col-1">
                     <button class="btn btn-outline-danger" @onclick='()=>{urlHelper.NavigateTo("/inicio");}'>
