--- a/Pages/Facturacion/AddFactura.razor
+++ b/Pages/Facturacion/AddFactura.razor
@@ -54,7 +54,8 @@
                 }
             </datalist>
             <input @bind="detalleFacturaRequest.Descuento" type="number" 
-            id="Descuento" placeholder="Descuento" class="form-control w-25" />
+                id="Descuento" placeholder="Descuento" class="form-control w-25" min="0"
+                max="30" step="1" aria-label="Discount Percentage"/>
             <label for="Descuento" class="input-group-text"><strong>Descuento</strong></label>
         </div>
 
