--- a/Pages/Facturacion/AddFactura.razor
+++ b/Pages/Facturacion/AddFactura.razor
@@ -60,8 +60,12 @@
         </div>
 
         <div class="input-group mb-3">
+            <label for="Descuento" class="input-group-text"><strong>Stock:</strong></label>
+            <span class="form-control ">
+                @Stock
+            </span>
             <label for="Descuento" class="input-group-text"><strong>Precio:</strong></label>
-            <span class="form-control w-50">
+            <span class="form-control w-25">
                 $@Precio.ToString("N2")
             </span>
             <input class="form-control w-25" type="number" @bind="@Cantidad" />
@@ -298,6 +302,7 @@
     public FacturaDetalleRequest detalleFacturaRequest { get; set; } = new();
     public decimal Precio { get; set; } = 0;
     public int Cantidad { get; set; } = 1;
+    public int Stock { get; set; }
     public int IdProducto { get; set; } = 0;
 
     private string FormatCustomerId(string customerId)
@@ -319,22 +324,26 @@
     {
         if(facturaRequest.Detalles.Any())
         {
+            Precio = 0;
+            Stock = 0;
             // Eliminar la información en facturaRequest.Detalles
             facturaRequest.Detalles.Clear();
+            Chance = false;
 
             // Actualizar el valor de @ultimoIdFactura
             await Consultar();
-            Chance = false;
         }
         else{
             await Consultar();
             Message = "Everything is ok 👌🏼";
+            Message = null;
         }
     }
     // Método para obtener el último Id de Factura
     void BuscarPercio(int idProducto)
     {
         Precio = Productos.FirstOrDefault(p => p.Id == idProducto)!.Precio;
+        Stock = Productos.FirstOrDefault(p => p.Id == idProducto)!.Stock;
         IdProducto = idProducto;
     }
     void BuscarSeleccionarCliente(string Contacto)
