--- a/Pages/Category/Category.razor
+++ b/Pages/Category/Category.razor
@@ -104,7 +104,7 @@
                                 <td>@item.Nombre</td>
                                 <td>
                                     <button @onclick="()=>Seleccionar(item.Id)"
-                                        class="btn btn-outline-warning">
+                                        class="btn btn-outline-primary">
                                         <span class="oi oi-pencil"></span>
                                     </button>
                                     <button @onclick="()=>Eliminar(item)"
